<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Hydra</string>
    <string name="name_minerva">Minerva</string>
    <string name="name_schamper">Schamper</string>
    <string name="nieuws">hydra</string>
    <string name="activiteiten">activiteiten</string>
    <string name="info">info</string>
    <string name="urgent">urgent</string>
    <string name="schamper">schamper</string>
    <string name="action_example">Voorbeeldactie</string>
    <string name="action_settings">Instellingen</string>
    <string name="hydra_icon_content_description">Hydra icoon</string>
    <string name="title_activity_association_activity_detail">Evenement</string>
    <string name="onboarding_homefeed_title">Homefeed</string>
    <string name="onboarding_homefeed_description">Kies wat je wilt zien in jouw homefeed.</string>
    <string name="pref_daily_notifications_title">Notificaties (experimenteel)</string>
    <string name="pref_daily_notifications_checkbox_summary">Geef dagelijks een notificatie over wat er op het menu staat in de resto.</string>
    <string name="pref_daily_notifications_checkbox_title">Dagelijkse notificaties</string>
    <string name="pref_daily_notifications_time_summary">Op welk moment wil je de melding krijgen?</string>
    <string name="pref_daily_notifications_time_title">Tijdstip</string>
    <string name="pref_daily_notifications_testbutton_text">Toon voorbeeld</string>
    <string name="pref_daily_notifications_test_summary">Laat een voorbeeldnotificatie zien.</string>
    <string name="pref_daily_notifications_test_title">Voorbeeld</string>
    <string name="pref_resto_title">Resto</string>
    <string name="pref_resto_description">Instellingen voor de studentenrestaurants</string>
    <string name="pref_resto_closing_hour">Sluitingsuur</string>
    <string name="pref_resto_closing_title">Sluitingsuur</string>
    <string name="pref_resto_closing_description">Kies vanaf welk uur de menu voor de volgende dag getoond wordt.</string>
    <string name="pref_resto_choice">Keuze resto</string>
    <string name="pref_resto_choice_title">Kies een resto in het overzicht</string>
    <string name="pref_activities_title">Activiteiten</string>
    <string name="pref_about_header_title">Over</string>
    <string name="pref_about_header_summary">Over de app</string>
    <string name="pref_about_licenses_title">Openbronsoftware</string>
    <string name="pref_about_licenses_summary">Licentiedetails voor gebruikte bibliotheken</string>
    <string name="pref_about_version_title">Versie</string>
    <string name="pref_about_version_summary">Versie %1$s [%2$d] (%3$s)</string>
    <string name="pref_about_changelog_title">Wijzigingen</string>
    <string name="pref_about_changelog_summary">Bekijk wat er nieuw is</string>
    <string name="pref_about_creator_title">Gemaakt door Zeus WPI</string>
    <string name="pref_about_issues_title">Feedback</string>
    <string name="pref_about_issues_summary">Meld fouten of geef suggesties</string>
    <string name="pref_minerva_title">Minerva</string>
    <string name="pref_minerva_category_account_title">Account &amp; synchronisatie</string>
    <string name="pref_sko_notification_title">Meldingen</string>
    <string name="pref_sko_notification_desc">Krijg meldingen over SKO</string>
    <string name="pref_notifications_sko_title">Student Kick-Off</string>
    <string name="openFacebook">Ondertussen kan je een bezoekje brengen aan onze Facebook-pagina.</string>
    <string name="facebookButtonDescription">Link naar onze Facebook-pagina.</string>
    <string name="comingsoontitle">Coming soon!</string>
    <string name="pref_home_feed_card_types_title">Soorten kaarten</string>
    <string name="pref_home_feed_card_types_summary">Kies welke soort kaarten je wilt zien in de homefeed</string>
    <string name="pref_home_feed_card_types_description">Kies welke soort kaarten je wilt zien in jouw homefeed. Je kan ook altijd kaarten verbergen vanuit de homefeed zelf.</string>
    <string name="pref_home_feed_data_saving_title">Databesparing</string>
    <string name="pref_home_feed_data_saving_summary">Bespaar data door geen nieuwe miniaturen te laden bij mobiele verbindingen</string>
    <string name="pref_home_feed_clear_cards_title">Verborgen kaarten wissen</string>
    <string name="pref_home_feed_clear_cards_summary">Wis de lijst van verborgen kaarten. Hierdoor zullen alle kaarten opnieuw getoond worden.</string>
    <string name="title_activity_hydra_web_view">Web View</string>
    <string name="title_activity_info_sub_item">Meer info</string>
    <string name="cancel">annuleren</string>
    <string name="set">OK</string>
    <string name="monday">maandag</string>
    <string name="tuesday">dinsdag</string>
    <string name="wednesday">woensdag</string>
    <string name="thursday">donderdag</string>
    <string name="friday">vrijdag</string>
    <string name="saturday">zaterdag</string>
    <string name="sunday">zondag</string>
    <string name="resto_notification_title">Resto menu</string>
    <string name="resto_notification_text">Bekijk het menu van de resto in de Hydra-app.</string>
    <string name="resto_action">OPEN RESTO PLOX!</string>
    <string name="section_format">Tab</string>
    <string name="resto_show_website">Website bekijken</string>
    <string name="action_refresh">Vernieuwen</string>
    <string name="begin_refresh">Vernieuwen…</string>
    <string name="end_refresh">Voltooid.</string>
    <string name="home_resto_view_menu">Menu</string>
    <string name="home_resto_view_sandwiches">Broodjes</string>
    <string name="resto_sandwich">Belegde broodjes</string>
    <string name="sandwich_price_medium">Groot: € %s</string>
    <string name="sandwich_price_small">Klein: € %s</string>
    <string name="sandwich_ingredients">Ingrediënten: %s.</string>
    <string name="again">Opnieuw</string>
    <string name="failure">Ophalen niet gelukt.</string>
    <string name="home_feed_failure">Ophalen sommige kaarten mislukt.</string>
    <string name="home_resto_view_resto">Resto\'s</string>
    <string name="resto_resto">Resto\'s</string>
    <string name="description">Beschrijving</string>
    <string name="no_location">Geen locatie.</string>
    <string name="no_description">Geen beschrijving.</string>
    <string name="no_data">Geen gegevens.</string>
    <string name="events_no_data">Er zijn geen evenementen gevonden. Probeer eens de filters aan te passen.</string>
    <string name="events_customize_filters">Filters aanpassen</string>
    <string name="title_activity_schamper">Schamperartikel</string>
    <string name="title_activity_news">Nieuwsartikel</string>
    <string name="resto_menu_title">Menu van %1$s • %2$s</string>
    <string name="resto_menu_title_short">Menu van %1$s</string>
    <string name="home_card_description">Activiteit door %s</string>
    <string name="by_author">Door %s</string>
    <string name="pref_home_title">Startscherm</string>
    <string name="title_activity_authentication">Autorisatie</string>
    <string name="account_label">Hydra</string>
    <string name="auth_maybe_not_ugent">Je bent waarschijnlijk niet verbonden met het netwerk van de UGent. Minerva zal dan (voorlopig) niet werken.</string>
    <string name="minerva_authorize">Autoriseren</string>
    <string name="need_auth">Om Minerva te gebruiken dien je toestemming te geven.</string>
    <string name="auth_denied">Je gaf geen toestemming om Minerva te gebruiken.</string>
    <string name="no_network">Kon niet verbinden.</string>
    <string name="announcement_by">Zender</string>
    <string name="announcement_when">Op</string>
    <string name="title_announcement_title">Aankondiging</string>
    <string name="logout">Afmelden</string>
    <string name="title_association_activity_detail">Vereniging</string>
    <string name="activity_title_minerva_course">Minerva-vak</string>
    <string name="activity_title_minerva_agenda">Agenda-item</string>
    <string name="auth_progress_prepare">Klaarmaken…</string>
    <string name="auth_progress_permission">Toegang vragen…</string>
    <string name="auth_progress_information">Informatie ophalen…</string>
    <string name="auth_progress_failure">Niet ingelogd.</string>
    <string name="auth_progress_done">Klaar.</string>
    <string name="minerva_sync_provider">Minerva</string>
    <string name="fragment_home_error">Kon %s niet laden.</string>
    <string name="fragment_home_error_minerva">minerva</string>
    <string name="fragment_home_error_event">activiteiten</string>
    <string name="fragment_home_error_news">nieuws</string>
    <string name="fragment_home_error_menu">menu</string>
    <string name="fragment_home_error_schamper">Schamper</string>
    <string name="fragment_home_error_special">evenement</string>
    <string name="drawer_open">Openen</string>
    <string name="drawer_close">Sluiten</string>
    <string name="title_home_feed">Overzicht</string>
    <string name="title_home_schamper">Schamper</string>
    <string name="title_home_resto">Resto</string>
    <string name="title_home_events">Evenementen</string>
    <string name="title_home_news">Nieuws</string>
    <string name="title_home_info">Info</string>
    <string name="title_home_minerva">Minerva</string>
    <string name="title_home_soon">Binnenkort</string>
    <string name="title_home_pref">Instellingen</string>
    <string name="activity_title_sko_overview">Student Kick-Off</string>
    <string name="activity_title_sko_preferences">Instellingen</string>
    <string name="menu_sko_view_website">Website bekijken</string>
    <string name="pref_notifications_urgent_title">Urgent.fm</string>
    <string name="pref_notifications_urgent_description">Opties voor Urgent.fm</string>
    <string name="urgent_album_art">Albumhoes</string>
    <string name="urgent_wifi_lock_description">The music player needs to keep your phone from going into sleep mode to prevent interrupting the music.</string>
    <string name="shortcut_resto_short_label">Restomenu</string>
    <string name="shortcut_resto_long_label">Bekijk de restomenu</string>
    <string name="shortcut_resto_disabled">Uitgeschakeld</string>
    <string name="shortcut_minerva_short_label">Minerva</string>
    <string name="shortcut_minerva_long_label">Bekijk Minerva-dingen</string>
    <string name="shortcut_minerva_disabled">Uitgeschakeld</string>
    <string name="title_activity_resto_location">Resto\'s</string>
    <string name="action_center">Ga naar resto\'s</string>
    <string name="error_no_activity">Niets gevonden om dit te openen!</string>
    <string name="events_no_location">Zonder locatie</string>
    <string name="title_license">Licenties</string>
    <string name="agenda_subtitle">%1$s • %2$s</string>
    <string name="minerva_calendar_device_event_title">
        <xliff:g example="Machinaal leren" id="course_name">%1$s</xliff:g>: <xliff:g example="Inleiding en afspraken" id="event_title">%2$s</xliff:g>
    </string>
    <string name="minerva_calendar_device_description">
        Les van het vak <xliff:g example="Machinaal leren" id="course_name">%1$s</xliff:g>
    </string>
    <plurals name="home_feed_announcement_title">
        <item quantity="one">%d aankondiging</item>
        <item quantity="other">%d aankondigingen</item>
    </plurals>
    <plurals name="home_feed_announcement_more">
        <item quantity="one">nog %d aankondiging…</item>
        <item quantity="other">nog %d aankondigingen…</item>
    </plurals>
    <string name="announcement_notification_content">Nieuwe aankondiging</string>
    <string name="announcement_notification_title">Aankondiging in %s</string>
    <string name="without">Zonder</string>
    <string name="ok">OK</string>
    <string name="content_desc_minerva_icon">Logo van Minerva</string>
    <string name="minerva_logging_out">Afmelden…</string>
</resources>