<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/auth_wrapper"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:text="@string/name_minerva" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/tabs_minerva"
            android:tint="@color/ugent_blue_dark"
            android:contentDescription="@string/content_desc_minerva_icon"/>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/vertical_padding"
                android:paddingRight="@dimen/vertical_padding"
                android:gravity="center"
                android:text="@string/need_auth"
                android:paddingBottom="16dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minerva_authorize"
                android:id="@+id/authorize" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            tools:visibility="visible"
            android:id="@+id/logout_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/vertical_padding"
                android:paddingRight="@dimen/vertical_padding"
                android:gravity="center"
                android:text="@string/minerva_logging_out"
                android:paddingBottom="16dp" />

            <include layout="@layout/x_progress_bar"
                android:id="@+id/logout_spinner"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"/>

</FrameLayout>